# fromzero

./: LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile
frontend/src/: App.js
