[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Elliot Winard <github@caveteen.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
